--- a/style.css
+++ b/style.css
@@ -7,3 +7,21 @@
 .margin-top-20 {
     margin-top:20px;
 }
+
+.big-div {
+  border:#000 2px solid;
+  width:150%;
+  height:400px;
+  background-color: red;
+}
+
+.small-div {
+  border:#000 .5px solid;
+  width:50%;
+  height:200px;
+  background-color: green;
+}
+
+.animate-div-now {
+  color: purple;
+}
